navbar fix dark mode

--- a/FRONTEND/src/app/member/member-sidenav/member-sidenav.component.scss
+++ b/FRONTEND/src/app/member/member-sidenav/member-sidenav.component.scss
@@ -249,7 +249,7 @@
       }
 
       input:checked {
-        background-color: var(--white);
+        background-color: var(--primary-color-light);
       }
 
       input:checked::after {
