--- a/FRONTEND/src/app/super-admin/sadmin-sidenav/sadmin-sidenav.component.scss
+++ b/FRONTEND/src/app/super-admin/sadmin-sidenav/sadmin-sidenav.component.scss
@@ -248,7 +248,7 @@
       }
 
       input:checked {
-        background-color: var(--white);
+        background-color: var(--primary-color-light);
       }
 
       input:checked::after {
